<resources>
    <string name="app_name">CloudNotes</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="input_the_code_sent_to_mail">Input the code sent to mail</string>
    <string name="registration_form">Registration Form</string>
    <string name="already_have_account_click_here_to">Already have account? Click to</string>
    <string name="log_in">Log In</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="login">LOGIN</string>

    <string name="facebook_app_id">YOUR_FACEBOOK_APP_ID</string>
    <string name="fb_login_protocol_scheme">fbYOUR_FACEBOOK_APP_ID</string>
    <string name="facebook_client_token">YOUR_FACEBOOK_CLIENT_TOKEN</string>




    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">hello string lorem</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="other_menu">Other Menu</string>
    <string name="home">Home</string>
    <string name="main_menu">Main Menu</string>
    <string name="settings">Settings</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>

    <string name="user_button">User Button</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type Note Here</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel_dialog">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="load_demo_fitness_data">Load Demo Fitness Data (for emulator)</string>
    <string name="demo_fitness_hint">No step sensor detected. Use demo data to preview charts and cloud sync.</string>
    <string name="demo_fitness_saved">Demo fitness data saved to DynamoDB</string>
    <string name="daily_step_goal_title">Daily Step Goal</string>
    <string name="step_goal_initial">0 / 10,000 steps</string>
    <string name="step_goal_progress">%1$,d / %2$,d steps</string>
    <string name="step_goal_remaining">%1$,d steps left to reach your goal</string>
    <string name="step_goal_remaining_default">10,000 steps left to reach your goal</string>
    <string name="step_goal_reached">Goal reached! Great job today!</string>
    <string name="note_tags">Note Tag</string>
    <string name="filter_by_tag">Filter by tag</string>
    <string name="tag_all">All</string>
    <string name="tag_work">Work</string>
    <string name="tag_study">Study</string>
    <string name="tag_personal">Personal</string>
    <string name="tag_ideas">Ideas</string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome_subtitle_default">Organize notes by tags and sync to the cloud</string>
    <string name="welcome_user_format">Hi, %1$s — ready to capture ideas?</string>

    <string name="profile_account_info">Account Info</string>
    <string name="profile_label_name">Name</string>
    <string name="profile_label_mobile">Mobile</string>
    <string name="profile_label_address">Address</string>
    <string name="profile_label_dob">Date of Birth</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_save">Save Changes</string>
    <string name="profile_cloud_sync">Synced via AWS Cognito</string>

    <string name="achievements_title">Achievements</string>
    <string name="achievements_subtitle">Earn badges as you use CloudNotes</string>
    <string name="achievements_hint">Create notes, track fitness, and complete your profile</string>
    <string name="achievements_progress_format">%1$d / %2$d unlocked</string>
    <string name="achievement_unlocked_format">%1$s %2$s unlocked!</string>
    <string name="achievements_load_error">Could not load achievements</string>
    <string name="achievements_menu">Achievements</string>

</resources>