<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_deep"
    tools:context=".activities.MainActivity"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/material_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@drawable/bg_toolbar_gradient"
                app:menu="@menu/app_bar_items"
                app:navigationIcon="@drawable/appbarmenu"
                app:navigationIconTint="@color/white"
                app:title="@string/app_name"
                app:titleTextAppearance="@style/TextAppearance.CloudNotes.Toolbar"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_app_gradient"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Welcome card -->
                <LinearLayout
                    android:id="@+id/welcomeCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@drawable/bg_welcome_card"
                    android:orientation="vertical"
                    android:padding="@dimen/_16sdp"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_welcome_greeting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/welcome_back"
                        android:textColor="@color/text_primary_light"
                        android:textSize="@dimen/_16ssp" />

                    <TextView
                        android:id="@+id/tv_welcome_subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="@string/welcome_subtitle_default"
                        android:textColor="@color/text_secondary_light"
                        android:textSize="@dimen/_11ssp" />
                </LinearLayout>

                <!-- Tags first -->
                <HorizontalScrollView
                    android:id="@+id/tagFilterScroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:scrollbars="none"
                    app:layout_constraintTop_toBottomOf="@id/welcomeCard">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupTagFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:chipSpacingHorizontal="8dp"
                        app:selectionRequired="true"
                        app:singleSelection="true" />
                </HorizontalScrollView>

                <!-- Search below tags -->
                <LinearLayout
                    android:id="@+id/layoutSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@drawable/bg_search_modern"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    app:layout_constraintTop_toBottomOf="@id/tagFilterScroll">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:contentDescription="@string/search_notes"
                        android:src="@drawable/ic_search"
                        app:tint="@color/primary_violet" />

                    <EditText
                        android:id="@+id/inputSearch"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/search_notes"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:textColor="@color/text_primary_light"
                        android:textColorHint="@color/text_muted"
                        android:textSize="@dimen/_13ssp" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/loadNotesProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:indeterminateTint="@color/primary_violet"
                    android:scaleX="1.7"
                    android:scaleY="1.7"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutSearch" />

                <!-- Single-column list -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/notesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="true"
                    android:paddingBottom="@dimen/_100sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutSearch" />

                <!-- Floating bottom dock (centered pill) -->
                <LinearLayout
                    android:id="@+id/layoutQuickActions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:background="@drawable/bg_floating_dock"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/imageAddImage"
                        android:layout_width="@dimen/_26sdp"
                        android:layout_height="@dimen/_26sdp"
                        android:contentDescription="@string/add_image"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/ic_image"
                        app:tint="@color/text_primary_light" />

                    <ImageView
                        android:id="@+id/imageAddNoteMain"
                        android:layout_width="@dimen/_46sdp"
                        android:layout_height="@dimen/_46sdp"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:background="@drawable/bg_fab_gradient"
                        android:contentDescription="@string/note_title"
                        android:padding="@dimen/_12sdp"
                        android:src="@drawable/ic_add"
                        app:tint="@color/white" />

                    <ImageView
                        android:id="@+id/imageAddWebLink"
                        android:layout_width="@dimen/_26sdp"
                        android:layout_height="@dimen/_26sdp"
                        android:contentDescription="@string/add_url"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/ic_web_link"
                        app:tint="@color/text_primary_light" />

                    <ImageView
                        android:id="@+id/imageAddNote"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:visibility="gone"
                        android:contentDescription="@string/note_title"
                        android:src="@drawable/ic_add_outline" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/drawer_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/bg_surface"
        app:headerLayout="@layout/drawer_navigation_header"
        app:itemIconTint="@color/text_secondary_light"
        app:itemTextColor="@color/text_primary_light"
        app:menu="@menu/drawer_menu_icon" />

</androidx.drawerlayout.widget.DrawerLayout>
